<resources>
    <string name="app_name">AppClinica</string>
    <string name="contentImgs" />
    <string name="login">Login</string>
    <string name="document_type">Tipo Documento</string>
    <string name="document_number">Nro. Documento</string>
    <string name="password">Contraseña</string>
    <string name="go_login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="login_to_books_system">Ingreso al Sistema de Citas</string>
    <string name="register_for_new_users">Registro de Nuevo Usuario</string>
    <string name="do_register">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="names">Nombres</string>
    <string name="first_last_name">Ape. Paterno.</string>
    <string name="second_last_name">Ape. Materno</string>
    <string name="civil_state">Estado Civil</string>
    <string name="blood_type">Grupo Sanguíneo</string>
    <string name="accept">Aceptar</string>
    <string name="no_user_found">No se ha encontrado el usuario.</string>
    <string name="field_must_be_filled">Debe completar este campo.</string>
    <string name="my_dates">Mis citas</string>
    <string name="my_doctors">Mis Médicos</string>
    <string name="my_records">Mi Historial</string>
    <string name="doctor">Doctor:</string>
    <string name="doctor_without2pts">Doctor</string>
    <string name="diagnostic">Diagnóstico</string>
    <string name="speciality">Especialidad:</string>
    <string name="speciality_w2pts">Especialidad</string>
    <string name="date">Fecha:</string>
    <string name="time">Hora:</string>
    <string name="invalid_password">La contraseña es inválida.</string>
    <string name="register_new_date">Registro de Cita</string>
    <string name="total_price">Precio Total: </string>
    <string name="user_already_exists">Ya existe un usuario con ese tipo y número de documento.</string>
    <string name="repeat_password">Repita contraseña</string>
    <string name="password_does_not_match">Las contraseñas no coinciden.</string>
    <string name="are_you_sure_logout">¿Seguro desea salir?</string>
    <string name="yes_logout">Si, salir.</string>
    <string name="no">No</string>
    <string name="pay_date">Pagar Cita</string>
    <string name="card_number">Número Tarjeta</string>
    <string name="confirm">Confirmar</string>
    <string name="your_date_has_been_saved">Su cita se ha registrado</string>
    <string name="you_have_no_dates">Aún no tiene ninguna cita programada.</string>
    <string name="you_have_no_doctors">Ningún doctor lo está atendiendo.</string>
    <string name="you_have_no_histories">Hasta el momento, no tiene ningun historial clínico</string>
    <string name="clinic_history_number_2pts">Nº Historia Clínica:</string>
    <string name="names_lastnames_2pts">Nombres y Apellidos:</string>
    <string name="age_2pts">Edad:</string>
    <string name="place_birth">Lugar de Nac.</string>
    <string name="place_birth_2pts">Lugar de Nac.:</string>
    <string name="my_profile">Mis Datos</string>
    <string name="attention_date">Fecha Atención</string>
    <string name="birthday">Fec. Nacimiento</string>
    <string name="details">Detalle</string>
    <string name="medicament">Medicamento</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="quantity">Cantidad</string>
    <string name="instructions">Instrucciones</string>
    <string name="recipe">Receta</string>
    <string name="tuition">Colegiatura</string>
    <string name="consulting_room">Consultorio</string>
    <string name="date_is_no_available_for_dates">No hay citas disponibles para el día seleccionado.</string>
</resources>
