<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.LoginActivity"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentImgs"
            android:src="@drawable/logo_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/contentImgs"
            android:src="@drawable/logo_texto" />

    </LinearLayout>

    <TextView
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_to_books_system"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/document_type"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spDocumentType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/document_number"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDocumentNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:inputType="number"
            android:maxLength="12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:inputType="textPassword"
            android:maxLength="12" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/go_login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:theme="@style/general_btn" />

    <TextView
        android:id="@+id/tvRegister"
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>