<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/Roboto-Bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_for_new_users"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/document_type"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spDocumentType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/document_number"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etDocumentNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:inputType="number"
                android:maxLength="12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:inputType="textPassword"
                android:maxLength="12" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/names"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etNames"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:inputType="textPersonName|text"
                android:maxLength="12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/first_last_name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etFirstLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:inputType="textPersonName|text"
                android:maxLength="12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/second_last_name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etSecondLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:inputType="textPersonName|text"
                android:maxLength="12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/civil_state"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spCivilState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_fields"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                fontPath="fonts/Roboto-Medium.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/blood_type"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spBloodType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                android:id="@+id/tvCancel"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegister"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:layout_weight=".5"
                android:text="@string/do_register"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:theme="@style/general_btn" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>