<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_dialogs"
    android:orientation="vertical"
    android:padding="22dp"
    tools:ignore="MissingPrefix">

    <TextView
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/my_profile"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clinic_history_number_2pts"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/names_lastnames_2pts"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_2pts"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_birth_2pts"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etPlaceBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>