<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.content.histories.HistoryDetailActivity"
    tools:ignore="MissingPrefix">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ic_chevron_left_white_24dp" />

                <TextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/details"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicament"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etMedicament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:padding="5dp"
            android:text="@string/paracetamol"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="text"
            android:padding="5dp"
            android:text="5 UNIDADES"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/instructions"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/etInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_disabled"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="10dp"
            android:text="INGERIR UNA TOMA ANTES DE DORMIR, POR 5 HORAS"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>